--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,3 +1,9 @@
 controllers:
-    resource: ../../src/Controller/
-    type: annotation
+  resource: ../../src/Controller/Web/
+  type: annotation
+  prefix: /web
+
+rest_controller:
+  resource: ../../src/Controller/Rest/
+  type: annotation
+  prefix: /api
