--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=df329b93f48863462cc6c4401d491d2e
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:peuimporte@127.0.0.1:3306/hitema_m1_m_php1
+DATABASE_URL=mysql://root:@127.0.0.1:3306/hitema_m1_m_php1
 ###< doctrine/doctrine-bundle ###
