--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         "symfony/serializer": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+      "ext-json": "*"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.13",
+        "symfony/var-dumper": "4.3.*",
         "symfony/web-server-bundle": "^4.3"
     },
     "config": {
