--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /vendor/
 .env
 ###< symfony/framework-bundle ###
-
+.idea*
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
