--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "symfony/serializer": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+      "ext-gd": "*"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.13",
